Wednesday, April 17 2002, Ron Steinke

	* Added a test to PollDefault: if there are no file
	  descriptors, fall out immediately before trying
	  to poll

Wednesday, April 17 2002, Ron Steinke

	* Changed Time::Stamp from a typedef'd struct to a full
	  class, operator-(const Stamp&, const Stamp&) is now
	  recognized properly

Monday, April 15 2002, James Turner

	* Unit tests! Configure with --enable-cppunit, and do
	  'make check' to run them. Note they only cover a few
	  classes at present, feel free to add more, or suggest
	  them in RT.

Wednesday, April 10 2002, James Turner

	* Fixed OOG emotes in Room.cpp (dispatcher logic was totally
	  wrong, the replacement is big but correct)
	* Moved logging resposibilites from Connection to seperate
	  Log.h file. Presently, this means clients which used to
	  attach to Eris::Connection::Log should now use
	  Eris::Logged.
	* Updated all the Eris log call sites to use the new impl
	* Numerous Metaserver tweaks to make it more stable when
	  connection errors and timeouts occurs; needs more work,
	  alas.

Monday, April 08 2002, Al Riddoch

	* src/Entity.h, src/Entity.cpp: Add a flag which indicates whether
	  an entity has a bounding box.

Thursday, April 04 2002, James Turner

	* Comitted Ron Steinke's polling changes. These add a new
	  class (Poll), which is an abstract polling interface
	  by the connections. A default implementation is supplied,
	  which simple calls 'select()': to retain the current Eris
	  behaviour, simple replace Connection::poll(), Meta::poll()
	  and Timeout::pollAll() with a single call to
	  Eris::PollDefault::poll() (defined in Eris/PollDefault.h).
	  If you're using Gtk+ or some other widget set that provides
	  idle and input notifications, then you can write your
	  own Poll subclass (or steal one: Ron already has a Gtk+
	  implementation!) and everything will work.

Friday, March 15 2002, James Turner

	* Fixed logic in setContainerById, when the parent was